--- a/Week 4-1 Deliverable.css
+++ b/Week 4-1 Deliverable.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: skyblue;
 }
 h1 {
   color: red;
@@ -9,7 +9,7 @@ h1 {
   padding: 50px;
 }
 p {
-  color: yellow;
+  color: green;
   font-family: courier;
   font-size: 150%
  }
