--- a/Week 4-1 Deliverable.css
+++ b/Week 4-1 Deliverable.css
@@ -1,15 +1,18 @@
 body {
   background-color: skyblue;
+  text-align: center;
 }
 h1 {
+  text-align: center;
   color: red;
   font-family: verdana;
   font-size: 250%;
-  border: 3px powderblue;
-  padding: 50px;
 }
 p {
-  color: green;
+  text-align: center;
+  color: black;
   font-family: courier;
-  font-size: 150%
+  font-size: 450%
+  border: 30px solid green;
+  padding: 3px;
  }
